# live_hermes

./: .gitignore  LICENSE  README.md  hermes_ui_ux.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/avatar/: AvatarCore.tsx  avatar.css
src/components/background/: CyberBackground.tsx
src/components/bubble/: OrbitalBubbleMap.tsx
src/components/chat/: BottomChat.tsx
src/components/effects/: HologramEffects.tsx
src/components/layout/: LeftPanel.tsx  MainArea.tsx  RightPanel.tsx  TopBar.tsx
src/components/mode/: ModeSystem.tsx
src/components/setup/: FirstRunSetup.tsx
src/components/sidebar/: AgentsPanel.tsx  MemoryPanel.tsx  SettingsPanel.tsx  TasksPanel.tsx  ToolsPanel.tsx
src/store/: hermes.ts  types.ts
