[package]
name = "hermes"
version = "2.0.0"
description = "HERMES — Live Cybernetic Intelligence"
edition = "2021"

[lib]
name = "hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
